--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,14 +1,38 @@
-
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
 body {
-    font-size: 14px;
-    font-weight: normal;
+  font-size: 14px;
+  font-weight: normal;
 }
 
 nav.navbar.navbar-expand-lg {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
+}
+
+
+/* User gravatar */
+
+section.user_info {
+  padding-bottom: 10px;
+  margin-top: 20px;
+  text-align: center;
+  .gravatar {
+    float: none;
+    max-width: 70px;
+  }
+  h1 {
+    font-size: 1.4em;
+    letter-spacing: -1px;
+    margin-bottom: 3px;
+    margin-top: 15px;
+  }
+}
+
+.gravatar {
+  float: left;
+  max-width: 50px;
+  border-radius: 50%;
 }
 
 
